syntax = "proto3";

package order_lifecycle;

service OrderLifecycleService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse) {}
  rpc ConfirmOrder(ConfirmOrderRequest) returns (ConfirmOrderResponse) {}
  rpc CompleteOrder(CompleteOrderRequest) returns (CompleteOrderResponse) {}
  rpc CancelOrder(CancelOrderRequest) returns (CancelOrderResponse) {}
}

message CreateOrderRequest {
  string customer_id = 1;
  string merchant_id = 2;

  repeated string items = 3;
  int64 timestamp = 4;
}
message CreateOrderResponse {}

message ConfirmOrderRequest {
  string order_id = 1;
}
message ConfirmOrderResponse {}

message CompleteOrderRequest{
  string order_id = 1;
}
message CompleteOrderResponse {}

message CancelOrderRequest{
  string order_id = 1;
}
message CancelOrderResponse {}